addressed positioning issues, cards in row wrap justify ok

--- a/Full_Stack_Python/DI-Bootcamp/Week_3/Hackathon/Code/style.css
+++ b/Full_Stack_Python/DI-Bootcamp/Week_3/Hackathon/Code/style.css
@@ -13,6 +13,53 @@
 
 }
 
+.tweet {
+  position: relative;
+/*  top: 50%;*/
+left: 29%;
+margin-top: -50px;
+/*margin-left: -50px;*/
+width: 100px;
+height: 100px;
+}
+
+.wotd {
+
+}
+blockquote.twitter-tweet {
+  display: inline-block;
+  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 16px;
+  border-color: #eee #ddd #bbb;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  margin: 10px 5px;
+  padding: 0 16px 16px 16px;
+  max-width: 468px;
+}
+
+blockquote.twitter-tweet p {
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 20px;
+}
+
+blockquote.twitter-tweet a {
+  color: inherit;
+  font-weight: normal;
+  text-decoration: none;
+  outline: 0 none;
+}
+
+blockquote.twitter-tweet a:hover,
+blockquote.twitter-tweet a:focus {
+  text-decoration: underline;
+}
+
 
 
 body {
@@ -23,11 +70,12 @@ background-image: url("backimg3.jpg");
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
+background-: ; 
 /*transition: background-image 2s ease-in-out;*/
 }
 
 
-.good {
+.open {
   text-align: center;
   padding: 50px;
   margin-top: 105px ;
@@ -38,30 +86,33 @@ background-repeat: no-repeat;
 }
 
 
-.grid-cont {
-/*  display: grid;
-  grid-template-columns: auto auto auto;*/
-  background-color: #2196F3;
-/*  padding: 10px;*/
-}
+
+
+
+
+
 
 .grid_item {
-  display: grid;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+
   grid-template-columns: 32% 32% 32%;
-  grid-column-gap: 30px;
-  background-color: none;
+/*  grid-column-gap: 30px;*/
+background-color: none;
 /*  background-color: rgba(255, 255, 255, 0.8);*/
 /*  border: 1px solid rgba(0, 0, 0, 0.8);*/
 padding: 80px;
-margin-left: 50px;
+/*margin-left: 13%;*/
 font-size: 30px;
 text-align: center;
 /*  width: 85%;*/
 /*  margin: 50px;*/
 }
 .new1 {
-/*  margin-top: 450px;*/
-border-top: 2px solid rgb(200, 191, 231);
+  margin-top: 450px;
+  border-top: 2px solid rgb(200, 191, 231);
 }
 
 
@@ -83,12 +134,16 @@ border-top: 2px solid rgb(200, 191, 231);
 }*/
 
 
+.open{
+  margin-left: 25px;
+}
+
 .hiintro {
   color: white;
 /*  font-family: Bankgothic;*/
-font-size: 100px;
+font-size: 45px;
 font-family: Daniel;
-position: inherit;
+/*position: inherit;*/
 }
 .someinfo {
 
@@ -110,6 +165,8 @@ main {
   background: linear-gradient(90deg, hsl(0, 0%, 20%), hsl(0, 0%, 70%), hsl(0, 0%, 20%));
 }
 .card {
+  background-color: lightblue;
+  font-family: Bankgothic;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 350px;
@@ -154,24 +211,18 @@ i {
 
 
 .card_1 {
-  background-image: url(IMG_3746.jpg);
-  background-size: cover;
-/*  height: auto  ;*/
-font-family: Bankgothic;
-}
-.card_2 {
-  background-image: url(_MG_0084.jpg);
-  background-size: cover;
 
-/*  height: auto  ;*/
-font-family: Bankgothic;
+  font-family: Bankgothic;
+}
+
+.card_2 {
+
+  font-family: Bankgothic;
 }
 .card_3 {
-  background-image: url(IMG_2219.JPG);
-  background-size: cover;
-  background-position: -51px  ;
-/*  height: auto  ;*/
-font-family: Bankgothic;
+
+
+  font-family: Bankgothic;
 }
 
 .scroller1 {
